# ec2site

./: .editorconfig  .env.example  .gitignore  IMPROVEMENT_PLAN.md  Makefile  README.md  SECURITY.md  compose.e2e.yaml  compose.test.yaml  compose.yaml  docker-compose.yml  sample.html
.github/: CODEOWNERS  dependabot.yml  vulnerability-exceptions.md
.github/workflows/: ci.yml  dependency-review.yml  security.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/app/: auth.py  config.py  database.py  email_utils.py  logging_config.py  main.py  models.py  rate_limit.py  schemas.py  seed.py  stripe_client.py
backend/app/routers/: addresses.py  admin_analytics.py  admin_coupons.py  admin_orders.py  admin_products.py  cart.py  coupons.py  favorites.py  orders.py  payment.py  products.py  users.py
backend/app/services/: checkout.py  order_actions.py  order_calc.py  order_status.py
backend/migrations/: env.py
backend/migrations/versions/: 20260715_ceb25f41fbf2_add_stripe_webhook_events_ledger.py  20260715_e42bdc93fd06_initial_schema.py
backend/scripts/: __init__.py  check_docs.py  export_openapi.py  run_e2e_server.py  run_with_env.py  seed_dev.py
backend/tests/: conftest.py  test_account_deletion.py  test_admin_analytics.py  test_admin_and_addresses.py  test_auth.py  test_cart_favorites_reviews.py  test_config.py  test_email_verification.py  test_openapi.py  test_order_cancel_return.py  test_order_creation.py  test_password_reset.py  test_product_images.py  test_rate_limit.py  test_stripe_payment.py
docs/: README.md  document_map.md
docs/coding_conventions/: backend.md  common.md  frontend.md  testing.md
docs/study/: asyncio_debug_study.md  asyncio_pyspy_combo_verification.md  debug_mode_bugs_demo.py  py_spy_study.md  (+3 more)
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
infra/: README.md
scripts/: bootstrap_dev.sh  install_docker_wsl.sh
(+309 files in other folders)
