[project]
name = "ec-site-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.35",
    "pydantic==2.9.2",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "stripe==11.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "ruff==0.14.4",
    "pip-audit==2.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501", # long lines are mostly seed data / email HTML templates, not worth wrapping
    "B008", # FastAPI's Depends(...) as a default argument is the framework's intended pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"] # env vars must be set before importing app modules that read them at import time
