[project]
name = "ec-site-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]==0.51.0",
    "sqlalchemy==2.0.51",
    "pydantic==2.13.4",
    "bcrypt>=4.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "stripe==15.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "ruff==0.15.21",
    "pip-audit==2.10.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501", # long lines are mostly seed data / email HTML templates, not worth wrapping
    "B008", # FastAPI's Depends(...) as a default argument is the framework's intended pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"] # env vars must be set before importing app modules that read them at import time
